--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -4,19 +4,23 @@ global:
   evaluation_interval: 35s # Evaluate rules every 60 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
 
-# Alertmanager configuration, it uses two alert manager for HA
+# Alertmanager configuration
 # alerting:
-# alertmanagers:
-# - static_configs:
-# - targets:
-# - localhost:9093
+#   alertmanagers:
+#   - static_configs:
+#     - targets:
+#       - localhost:9093
+# it uses two alert manager for HA
 # - 192.168.157.81:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 # rule_files:
-# - "alert_rules.yml"
-# - "second_rules.yml"
-
+#         - "/etc/carbonio/carbonio-prometheus/rules/node_exporter.yaml"
+#         - "/etc/carbonio/carbonio-prometheus/rules/mysql.yaml"
+#         - "/etc/carbonio/carbonio-prometheus/rules/postgres.yaml"
+#         - "/etc/carbonio/carbonio-prometheus/rules/consul.yaml"
+#         - "/etc/carbonio/carbonio-prometheus/rules/mta_queues.yaml"
+#         - "/etc/carbonio/carbonio-prometheus/rules/clamav.yaml"
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
@@ -51,6 +55,21 @@ scrape_configs:
         datacenter: "dc1"
         services:
           - "carbonio-prometheus-postgres-exporter"
+        tags:
+          - "prometheus-exporter"
+    relabel_configs:
+      - source_labels: ["__meta_consul_node"]
+        regex: "(agent|server)-(.+)-{{ consulhostsdomain }}"
+        replacement: "$2.{{ hostsdomain }}"
+        target_label: instance
+
+  - job_name: "pgpool"
+    consul_sd_configs:
+      - server: "localhost:8500"
+      - token: "{{ consultoken }}"
+        datacenter: "dc1"
+        services:
+          - "carbonio-prometheus-pgpool-exporter"
         tags:
           - "prometheus-exporter"
     relabel_configs:
@@ -126,6 +145,21 @@ scrape_configs:
         datacenter: "dc1"
         services:
           - "carbonio-prometheus-consul-exporter"
+        tags:
+          - "prometheus-exporter"
+    relabel_configs:
+      - source_labels: ["__meta_consul_node"]
+        regex: "(agent|server)-(.+)-{{ consulhostsdomain }}"
+        replacement: "$2.{{ hostsdomain }}"
+        target_label: instance
+
+  - job_name: "clamav"
+    consul_sd_configs:
+      - server: "localhost:8500"
+      - token: "{{ consultoken }}"
+        datacenter: "dc1"
+        services:
+          - "carbonio-prometheus-clamav-exporter"
         tags:
           - "prometheus-exporter"
     relabel_configs:
