--- a/packages/prometheus-alertmanager/PKGBUILD
+++ b/packages/prometheus-alertmanager/PKGBUILD
@@ -12,18 +12,21 @@ source=(
   "https://github.com/prometheus/alertmanager/releases/download/v${pkgver}/alertmanager-${pkgver}.linux-amd64.tar.gz"
   "alertmanager.yml"
   "email.tmpl"
-  "alert_rules.yml"
+  "telegram.tmpl"
   "${pkgname}.default"
   "${pkgname}.service"
   "prometheus.sysusers"
+  "${pkgname}.tmpfiles"
 )
-sha256sums=('abd73e2ee6bf67d3888699660abbecba7b076bf1f9459a3a8999d493b149ffa6'
-  '647bc95ad3012f4ea83ccfacf0a990e860c10c01f00a191332d00e5575c6d9c7'
+sha256sums=(
+  'abd73e2ee6bf67d3888699660abbecba7b076bf1f9459a3a8999d493b149ffa6'
+  'cce91b60dd9a5e47e4c9ce535bc770f7a388b716839fedc2611a2f63d74ef26c'
   'ae12a6e0514c4087060e4d5246eedbd7bd7d44c3326b480355b45e6aa823ed6b'
-  'c4b12f3c8e74afd6a5509cbaf2398be4c49c21bb38c4ab96c5ee5f06d7a63fac'
+  '34b0850a3afd77765fe4b3cca2fffd95564087fb465a39bd8a4e3a7a98a3c17f'
   'fe18f2e90fd2373867328631b8ec6fba405157e826af31272b6ef97e355cfcb4'
-  '9c981fc9bb508119117ca60b63414d1668b4969e5f92b44a0c507bf01cc09ac1'
-  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224')
+  '588d7e361c9cd31458760ad1f7a5fe7cc08d8be276774854f7c7f68873c9101a'
+  '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
+  'e64c0dbcbf49904a1e2b70bf0b01d3a8503cd28912abf8ef677b2e415649e0b8')
 
 depends=(
   "systemd"
@@ -35,11 +38,22 @@ conflicts=(
 
 backup=(
   "etc/carbonio/${pkgname}/alertmanager.yml"
-  "etc/carbonio/${pkgname}/email.tmpl"
-  "etc/carbonio/${pkgname}/alert_rules.yml"
+  "etc/carbonio/${pkgname}/templates/email.tmpl"
+  "etc/carbonio/${pkgname}/templates/telegram.tmpl"
 )
 
 package() {
+  cd "${srcdir}"
+
+  install -Dm644 "${pkgname}.tmpfiles" \
+    "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+  install -Dm 644 "${pkgname}.service" \
+    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${pkgname}.default" \
+    "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "prometheus.sysusers" \
+    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+
   cd "${srcdir}/alertmanager-${pkgver}.linux-amd64"
 
   install -Dm 755 alertmanager \
@@ -47,22 +61,17 @@ package() {
   install -Dm 755 amtool \
     "${pkgdir}/usr/bin/amtool"
 
-  install -dm 750 -o210 -g210 "${pkgdir}/var/lib/alertmanager/data"
-  install -dm 750 -o210 -g210 "${pkgdir}/etc/carbonio/${pkgname}/email-templates"
+  install -dm 750 "${pkgdir}/var/lib/alertmanager/data"
+  install -dm 750 "${pkgdir}/etc/carbonio/${pkgname}/templates"
 
-  install -Dm 644 -g210 "${srcdir}/alertmanager.yml" \
+  install -Dm 644 "${srcdir}/alertmanager.yml" \
     "${pkgdir}/etc/carbonio/${pkgname}/alertmanager.yml"
-  install -Dm 644 -g210 "${srcdir}/email.tmpl" \
-    "${pkgdir}/etc/carbonio/${pkgname}/email.tmpl"
-  install -Dm 644 -g210 "${srcdir}/alert_rules.yml" \
-    "${pkgdir}/etc/carbonio/${pkgname}/alert_rules.yml"
 
-  install -Dm 644 "${srcdir}"/${pkgname}.service \
-    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm 644 "${srcdir}"/${pkgname}.default \
-    "${pkgdir}/etc/default/${pkgname}"
-  install -Dm 644 "${srcdir}"/prometheus.sysusers \
-    "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
+  install -Dm 644 "${srcdir}/telegram.tmpl" \
+    "${pkgdir}/etc/carbonio/${pkgname}/templates/"
+  install -Dm 644 "${srcdir}/email.tmpl" \
+    "${pkgdir}/etc/carbonio/${pkgname}/templates/"
+
 }
 
 postinst() {
