--- a/packages/prometheus-alertmanager/alertmanager.yml
+++ b/packages/prometheus-alertmanager/alertmanager.yml
@@ -1,47 +1,33 @@
-global:
-  smtp_smarthost: { { smtp_smarthost } }
-  smtp_from: { { smtp_from } }
-  smtp_require_tls: true
-
-templates:
-  - "/etc/carbonio/carbonio-prometheus-alertmanager/*.tmpl"
-
 route:
-  group_by: ["alertname", "job", "istance"]
-  repeat_interval: 1m
-  group_interval: 2m
-  receiver: "default"
+  group_by: ['alertname']
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 3h
   routes:
+    - matchers:
+      - severity=~"critical|warning"
+      receiver: telegram
+      continue: true
     - match:
-        severity: warning
-      receiver: warning
-
-    - match:
-        severity: critical
-      receiver: critical
-
+        job: clamav
+      receiver: email
+      
 receivers:
-  - name: "default"
+  - name: 'telegram'
+    telegram_configs:
+    - bot_token: BOT_TOKEN
+      api_url: https://api.telegram.org
+      chat_id: CHAT_ID
+      message: '{{ template "telegram.message" . }}'
+      parse_mode: "HTML"
+  - name: 'email'
     email_configs:
-      - send_resolved: false
-        to: { { smtp_to } }
-        headers:
-          subject: "{{ .Alerts.Firing | len }} {{ .CommonLabels.severity }} alert on {{ .CommonLabels.instance }}"
-        html: '{{ template "email.tmpl" . }}'
-        require_tls: false
-  - name: "warning"
-    email_configs:
-      - send_resolved: false
-        to: { { smtp_to } }
-        headers:
-          subject: "{{ .Alerts.Firing | len }} {{ .CommonLabels.severity }} alert on {{ .CommonLabels.instance }}"
-        html: '{{ template "email.tmpl" . }}'
-        require_tls: false
-  - name: "critical"
-    email_configs:
-      - send_resolved: false
-        to: { { smtp_to } }
-        headers:
-          subject: "{{ .Alerts.Firing | len }} {{ .CommonLabels.severity }} alert on {{ .CommonLabels.instance }}"
-        html: '{{ template "email.tmpl" . }}'
-        require_tls: false
+    - to: 'TO_EMAIL'
+      from: 'FROM_EMAIL'
+      smarthost: SMTP_HOST:PORT
+      auth_username: 'USERNAME'
+      auth_password: 'PASSWORD'
+      require_tls: yes
+      
+templates:
+  - "/etc/carbonio/carbonio-prometheus-alertmanager/templates/*.tmpl"
