--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname="carbonio-prometheus-mysqld-exporter"
-pkgver="0.15.0"
+pkgver="0.15.1"
 pkgrel="1"
 pkgdesc="Mysqld exporter for open-source systems monitoring and alerting toolkit"
 maintainer="Zextras <packages@zextras.com>"
@@ -15,14 +15,17 @@ source=(
   "${pkgname}-consul.hcl"
   "set-${pkgname}.sh"
   "prometheus.sysusers"
+  "${pkgname}.tmpfiles"
 )
 
-sha256sums=('3973db1c46b0323a957a43916b759ee71ddab9096958ce78401fdff894b0dc51'
+sha256sums=(
+  '85ea5bc68e1b9f466c1df10ff016652dd210371d42245e012b876265e89ae29d'
   'd6c82a6c806a25a87d4bda6aa6a08af0af7a2528f4773dc6ee78e98f6d7b587e'
   'e2ab2353c1149f357f849781fc28b49d30726aef1c447ae4b43051160d2817a9'
   '29d76d86b207927994a773c82e9e93df4d69ddb54c9ed5142966b7a0d43da772'
   '1ddc0311e6391b262db7c62ac26a9f4949a6e0a082eb9d3f3bac8b9fb505a4f8'
-  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224')
+  '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
+  'd7bd4755e0d5c7a774ad616f3fa93d174ad7efbb7a7e37a045d141e05dcbdfe8')
 
 depends=(
   "systemd"
@@ -33,6 +36,11 @@ conflicts=(
 )
 
 package() {
+  cd "${srcdir}/"
+
+  install -Dm644 "${pkgname}.tmpfiles" \
+    "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+
   cd "${srcdir}/mysqld_exporter-${pkgver}.linux-amd64"
 
   install -Dm 755 mysqld_exporter \
@@ -43,7 +51,6 @@ package() {
 
   install -Dm 644 "${srcdir}/${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-
   install -Dm 644 "${srcdir}/${pkgname}.default" \
     "${pkgdir}/etc/default/${pkgname}"
 
