--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname="carbonio-prometheus-openldap-exporter"
-pkgver="2.2.2"
+pkgver="2.2.4"
 pkgrel="1"
 pkgdesc="OpenLDAP exporter for open-source systems monitoring and alerting toolkit"
 maintainer="Zextras <packages@zextras.com>"
@@ -9,28 +9,35 @@ priority="optional"
 arch=('x86_64')
 license=('Apache-2.0')
 source=(
-  "https://github.com/tomcz/openldap_exporter/releases/download/v${pkgver}/openldap_exporter-linux-amd64.gz"
+  "https://github.com/mlorenzo-stratio/openldap_exporter/archive/refs/tags/v${pkgver}.zip"
   "${pkgname}.default"
   "${pkgname}.service"
   "${pkgname}.yml"
   "${pkgname}-consul.hcl"
   "set-${pkgname}.sh"
   "prometheus.sysusers"
+  "${pkgname}.tmpfiles"
 )
-sha256sums=('d47bdc46a3960a06015cd750a780fc8475d9d613f85e1759c5fcaf97a9da11bb'
+sha256sums=(
+  '4615e0e422109af6bdba6488092b5b651b8a014ef9bdf91f37978234d8484ce3'
   '9269776a1c768234c78dc2791bc576c55984aef2986e9d16255d23cc47c1b20f'
   'c369119e4923f6927aa6ee09506d1ff00799f77e36f10715165f6858c657884a'
   '01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b'
   'c69a28ab7f773338244fa48a8533f7a4ec2689ffbd3cbb36af3af839e1909873'
-  '2c287b3a2905e389a2872db9204afdd033781c3a22b0f78a4315b39b312c5d5f'
-  'b15c53ad5dd81f03e3af90e8a78a1a0e84e68af4de2beb18a9851bb4e8754224')
+  '3875cb65cfd8365f6f65d1b0d8d10d7eb21a3ef2bef169c01d4e94ad8419e959'
+  '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
+  '6514371196a55f2096c4c65d281eaf2ace8648f94c432d57ff91776e1949d2ec')
 
 depends=(
   "systemd"
 )
 
 conflicts=(
-  'prometheus-openldap-exporter'
+  'openldap-exporter'
+)
+
+makedepends=(
+  "git"
 )
 
 backup=(
@@ -39,26 +46,34 @@ backup=(
   "etc/zextras/service-discover/${pkgname}.hcl"
 )
 
-package() {
-  cd "${srcdir}"
-  gunzip -f openldap_exporter-linux-amd64.gz
-  install -Dm 755 openldap_exporter-linux-amd64 "${pkgdir}/usr/bin/${pkgname}"
+build() {
+  cd "${srcdir}/openldap_exporter-${pkgver}/"
+  make build-linux
+}
 
-  install -Dm 644 "${srcdir}/set-${pkgname}.sh" \
+package() {
+
+  cd "${srcdir}/"
+
+  install -Dm644 "${pkgname}.tmpfiles" \
+    "${pkgdir}/usr/lib/tmpfiles.d/${pkgname}.conf"
+
+  install -Dm 755 "./openldap_exporter-${pkgver}/target/openldap_exporter-linux" \
+    "${pkgdir}/usr/bin/${pkgname}"
+
+  install -Dm 644 "set-${pkgname}.sh" \
     "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
 
-  install -Dm 644 "${srcdir}/${pkgname}.service" \
+  install -Dm 644 "${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-
-  install -Dm 644 "${srcdir}/${pkgname}.default" \
+  install -Dm 644 "${pkgname}.default" \
     "${pkgdir}/etc/default/${pkgname}"
-
-  install -Dm 644 "${srcdir}/${pkgname}.yml" \
+  install -Dm 644 "${pkgname}.yml" \
     "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.yml"
 
-  install -Dm 644 "${srcdir}/prometheus.sysusers" \
+  install -Dm 644 "prometheus.sysusers" \
     "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
-  install -Dm 644 "${srcdir}/${pkgname}-consul.hcl" \
+  install -Dm 644 "${pkgname}-consul.hcl" \
     "${pkgdir}/etc/zextras/service-discover/${pkgname}.hcl"
 }
 
