--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -24,6 +24,10 @@ source=(
   "carbonio-prometheus.sh"
   "policies.json"
   "${pkgname}.tmpfiles"
+  "prometheus.hcl"
+  "prometheus-sidecar.service"
+  "intentions.json"
+  "service-protocol.json"
 )
 sha256sums=(
   '5d58b52ccfeff25700bc8d14ecc1235cbf112a05041e3b2f6900d16b44856f6f'
@@ -40,7 +44,11 @@ sha256sums=(
   'e9cbb061d6c3593403db2f233d3202ac7ea07754887b67c9cd620e784b5a1868'
   'cdb7b2b2f5ac90c4f3958e584a4c5899c250db1b4775e34f1a242e5713443192'
   '9a3cb3da73ca92b641e9ac31223deadc0587c9ea280884a8ac8e80ab4266aa25'
-  'ecd1fa22949f3addd4ff129f1ce3fd8f02301faca48b73ce90bd5bc75e147d5e')
+  'ecd1fa22949f3addd4ff129f1ce3fd8f02301faca48b73ce90bd5bc75e147d5e'
+  ''
+  ''
+  ''
+  '')
 
 depends=(
   "systemd"
@@ -63,6 +71,8 @@ package() {
     "${pkgdir}/etc/zextras/pending-setups.d/carbonio-prometheus.sh"
   install -Dm 644 "prometheus.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "prometheus-sidecar.service" \
+    "${pkgdir}/lib/systemd/system/${pkgname}-sidecar.service"
   install -Dm 644 "prometheus.sysusers" \
     "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
   install -Dm 644 "prometheus.default" \
@@ -75,8 +85,13 @@ package() {
   install -dm 750 "${pkgdir}/etc/carbonio/${pkgname}/rules"
   install -Dm 640 "${srcdir}/prometheus.yml" \
     "${pkgdir}/etc/carbonio/${pkgname}/prometheus.yml"
-  install -Dm 640 "${srcdir}/policies.json" \
+  install -Dm 644 "${srcdir}/policies.json" \
     "${pkgdir}/etc/carbonio/${pkgname}/service-discover/policies.json"
+  install -Dm 644 "${srcdir}/policies.json" \
+    "${pkgdir}/etc/carbonio/${pkgname}/service-discover/service-protocol.json"
+  install -Dm 644 "${srcdir}/policies.json" \
+    "${pkgdir}/etc/carbonio/${pkgname}/service-discover/intentions.json"
+
   cp -r consoles* "${pkgdir}/etc/carbonio/${pkgname}/"
 
   # Prometheus rules:
@@ -108,6 +123,7 @@ postinst() {
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
+    sustemctl enable ${pkgname}-sidecar.service >/dev/null 2>&1 || :
   fi
 
   echo "======================================================"
