feat: Use expanded names when starting services

--- a/packages/prometheus/PKGBUILD
+++ b/packages/prometheus/PKGBUILD
@@ -122,8 +122,8 @@ postinst() {
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
-    systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
-    sustemctl enable ${pkgname}-sidecar.service >/dev/null 2>&1 || :
+    systemctl enable carbonio-prometheus.service >/dev/null 2>&1 || :
+    sustemctl enable carbonio-prometheus-sidecar.service >/dev/null 2>&1 || :
   fi
 
   echo "======================================================"
