--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -21,7 +21,7 @@ source=(
 
 sha256sums=('85ea5bc68e1b9f466c1df10ff016652dd210371d42245e012b876265e89ae29d'
   'd6c82a6c806a25a87d4bda6aa6a08af0af7a2528f4773dc6ee78e98f6d7b587e'
-  '68867890db51abd334ed916d512f670a09d6c6855685b1291e8529262b08668c'
+  '59455289e73f6b54855952ceea52f20406a4cc0a5440591f11ffd383e5dac278'
   '8f7f35a1ca4fdbfea351f9dad62b5f50ec059b7e18314c9137ab655eca336064'
   'b95da1a205ee62d50172ba10b6394a6a705d1844d2846959d60154e98cbe212d'
   '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
@@ -71,7 +71,7 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  #/usr/bin/set-carbonio-prometheus-mysqld-exporter.sh
+  /usr/bin/set-carbonio-prometheus-mysqld-exporter.sh
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
