--- a/packages/prometheus-mysqld/carbonio-prometheus-mysqld-exporter.service
+++ b/packages/prometheus-mysqld/carbonio-prometheus-mysqld-exporter.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Carbonio Prometheus MySQL exporter
 Wants=network-online.target
-After=network.target
+After=network.target carbonio-advanced-sidecar.service carbonio-mailbox-sidecar.service 
 
 [Service]
 User=carbonio-prometheus
