--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -17,18 +17,16 @@ source=(
   "prometheus.sysusers"
   "${pkgname}.tmpfiles"
   "${pkgname}.cnf"
-  "${pkgname}-setup"
 )
 
 sha256sums=('85ea5bc68e1b9f466c1df10ff016652dd210371d42245e012b876265e89ae29d'
   'd6c82a6c806a25a87d4bda6aa6a08af0af7a2528f4773dc6ee78e98f6d7b587e'
-  '86e9412e5ae82c9b49dac2892b9656223d958f456e1de84e437ee8a7fab920c0'
+  '5341350946e535245507e7917d1d65ea7551a0cbec1e1dc0e0b7ed800d553e55'
   '8f7f35a1ca4fdbfea351f9dad62b5f50ec059b7e18314c9137ab655eca336064'
-  '0fbd4dd75af78a251168a21d52c237eaa93e392469b8e54d2b0a53e0c6a9975e'
+  'fb528bf5bc16bf6b560c9ac9fda97f2f74057ffdfa97b33f1619c78f8f3f68a9'
   '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
   '6f76239ebd4ecc86758e73f028960249fe343e407d1b1cf38f11b9e1c22047df'
-  '60953e6b15067bead757a84e0cf589e15e5c9749bbd4b331a3a9e512d4e82586'
-  '41a8b984025f454998b39da5409594b5e03f4dca05a609316b26f3a480e69f49')
+  '60953e6b15067bead757a84e0cf589e15e5c9749bbd4b331a3a9e512d4e82586')
 
 depends=(
   "systemd"
@@ -48,9 +46,6 @@ package() {
 
   install -Dm 755 mysqld_exporter \
     "${pkgdir}/usr/bin/${pkgname}"
-
-  install -Dm 755  "${srcdir}/${pkgname}-setup"\
-    "${pkgdir}/usr/bin/${pkgname}-setup"
 
   install -Dm 755 "${srcdir}/set-${pkgname}.sh" \
     "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
@@ -76,8 +71,6 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  #/usr/bin/set-carbonio-prometheus-mysqld-exporter.sh
-
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
@@ -86,7 +79,7 @@ postinst() {
 
   echo "======================================================"
   echo "Carbonio Mysql Exporter installed successfully!"
-  echo "You must run pending-setups to configure it and reload service discover or add this host to prometheus.yml"
+  echo "You must run pending-setups to configure it correctly."
   echo "======================================================"
 }
 
