--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname="carbonio-prometheus-mysqld-exporter"
 pkgver="0.15.1"
-pkgrel="2"
+pkgrel="3"
 pkgdesc="Mysqld exporter for open-source systems monitoring and alerting toolkit"
 maintainer="Zextras <packages@zextras.com>"
 url="https://zextras.com"
@@ -16,15 +16,17 @@ source=(
   "set-${pkgname}.sh"
   "prometheus.sysusers"
   "${pkgname}.tmpfiles"
+  "${pkgname}.cnf"
 )
 
 sha256sums=('85ea5bc68e1b9f466c1df10ff016652dd210371d42245e012b876265e89ae29d'
   'd6c82a6c806a25a87d4bda6aa6a08af0af7a2528f4773dc6ee78e98f6d7b587e'
   'e2ab2353c1149f357f849781fc28b49d30726aef1c447ae4b43051160d2817a9'
   '8f7f35a1ca4fdbfea351f9dad62b5f50ec059b7e18314c9137ab655eca336064'
-  '1ddc0311e6391b262db7c62ac26a9f4949a6e0a082eb9d3f3bac8b9fb505a4f8'
+  '14c6cf3017a3b31fff77215f79e89d1c83bf994f2e78fa97d9b8e4ccdf613f29'
   '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
-  'd7bd4755e0d5c7a774ad616f3fa93d174ad7efbb7a7e37a045d141e05dcbdfe8')
+  '6f76239ebd4ecc86758e73f028960249fe343e407d1b1cf38f11b9e1c22047df'
+  '334736e422cbcc875f1c6d87c5e2f885ea3daa4ee4c981205314e64581c2e68e')
 
 depends=(
   "systemd"
@@ -46,12 +48,14 @@ package() {
     "${pkgdir}/usr/bin/${pkgname}"
 
   install -Dm 755 "${srcdir}/set-${pkgname}.sh" \
-    "${pkgdir}/usr/bin/set-${pkgname}.sh"
+    "${pkgdir}/etc/zextras/pending-setups.d/set-${pkgname}.sh"
 
   install -Dm 644 "${srcdir}/${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/${pkgname}.default" \
     "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "${srcdir}/${pkgname}.cnf" \
+    "${pkgdir}/etc/carbonio/${pkgname}/${pkgname}.cnf"
 
   install -Dm 644 "${srcdir}/prometheus.sysusers" \
     "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"
@@ -67,8 +71,6 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  /usr/bin/set-carbonio-prometheus-mysqld-exporter.sh
-
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
@@ -77,7 +79,7 @@ postinst() {
 
   echo "======================================================"
   echo "Carbonio Mysql Exporter installed successfully!"
-  echo "You must reload service discover or add this host to prometheus.yml"
+  echo "You must run pending-setups to configure it correctly."
   echo "======================================================"
 }
 
@@ -86,6 +88,9 @@ prerm() {
     systemctl --no-reload disable carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
     systemctl stop carbonio-prometheus-mysqld-exporter.service >/dev/null 2>&1 || :
   fi
+
+  rm -f /etc/zextras/pending-setups.d/set-carbonio-prometheus-mysqld-exporter.sh
+  rm -f /etc/zextras/pending-setups.d/done/set-carbonio-prometheus-mysqld-exporter.sh
 }
 
 postrm() {
