--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -184,6 +184,22 @@ scrape_configs:
         separator: ":"
         target_label: __address__
 
+  - job_name: "storages"
+    consul_sd_configs:
+      - server: "localhost:8500"
+      - token: "{{ consultoken }}"
+        services:
+          - "carbonio-storages"
+    relabel_configs:
+      - source_labels: ["__meta_consul_node"]
+        regex: "(agent|server)-(.+)-{{ consulhostsdomain }}"
+        replacement: "$2.{{ hostsdomain }}"
+        target_label: instance
+      - source_labels:
+          [__meta_consul_address, __meta_consul_service_metadata_prom_port]
+        separator: ":"
+        target_label: __address__
+
   - job_name: "blackbox"
     metrics_path: /probe
     params:
