--- a/packages/prometheus/prometheus.yml
+++ b/packages/prometheus/prometheus.yml
@@ -184,6 +184,21 @@ scrape_configs:
         separator: ":"
         target_label: __address__
 
+  - job_name: "rabbitmq"
+    consul_sd_configs:
+      - server: "localhost:8500"
+      - token: "{{ consultoken }}"
+        datacenter: "dc1"
+        services:
+          - "carbonio-prometheus-rabbitmq-exporter"
+        tags:
+          - "prometheus-exporter"
+    relabel_configs:
+      - source_labels: ["__meta_consul_node"]
+        regex: "(agent|server)-(.+)-{{ consulhostsdomain }}"
+        replacement: "$2.{{ hostsdomain }}"
+        target_label: instance
+
   - job_name: "storages"
     consul_sd_configs:
       - server: "localhost:8500"
