--- a/packages/prometheus-haproxy/PKGBUILD
+++ b/packages/prometheus-haproxy/PKGBUILD
@@ -34,8 +34,12 @@ backup=(
 )
 
 package() {
+
+  cd "${srcdir}/haproxy_exporter-${pkgver}.linux-amd64/"
+
   install -Dm 755 "haproxy_exporter" \
     "${pkgdir}/usr/bin/${pkgname}"
+
   install -Dm 644 "${srcdir}/${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
   install -Dm 644 "${srcdir}/${pkgname}.default" \
