--- a/packages/prometheus-clamav/PKGBUILD
+++ b/packages/prometheus-clamav/PKGBUILD
@@ -1,16 +1,16 @@
 # _gitname="clamav-prometheus-exporter-master"
 pkgname="carbonio-prometheus-clamav-exporter"
 pkgdesc="Prometheus-Exporter for ClamAV"
-pkgver="0.2.0"
+pkgver="1.0.0"
 maintainer="Zextras <packages@zextras.com>"
-pkgrel="2"
+pkgrel="1"
 section="mail"
 priority="optional"
 arch=('x86_64')
 url="https://zextras.com"
 license=("Apache-2.0")
 source=(
-  "https://github.com/r3kzi/clamav-prometheus-exporter/archive/a589557e45e08f5c6b6630536b4da5c3261a335b.zip"
+  "https://github.com/r3kzi/clamav-prometheus-exporter/archive/refs/tags/v${pkgver}.zip"
   "${pkgname}.service"
   "${pkgname}-consul.hcl"
   "prometheus.sysusers"
@@ -26,17 +26,18 @@ conflicts=(
 )
 
 makedepends=(
-  "git"
+  "git" 
 )
 
-sha256sums=('37b895f0671dc7b94f0b5f6e25dc0a29b34de4496f662acdd06d9a7550897630'
+sha256sums=('a2f1dac67a9e84591cd7f8e99d9ce4b695813bc61590e3047ac5596b4104f674'
   'fff05ace4102209b6aca844b4501f623d6270acf5820120ebbe2705b438489a3'
   'b0cbd0097d5818d7c6dd259cec9df323579ba46a660d92ea11d565773aa4f4b1'
   '48e22f1cf5592c90a62683f3e551fde213258b980d0858d8a7927da0273fe746'
   '0fc91310e2c3140bd90b2fad62f497d8e7432cf3a2a8ab3a034b45958e01012a')
 
 build() {
-  cd "${srcdir}/clamav-prometheus-exporter-a589557e45e08f5c6b6630536b4da5c3261a335b/"
+
+  cd "${srcdir}/clamav-prometheus-exporter-1.0.0/"
 
   export CGO_CPPFLAGS="${CPPFLAGS}"
   export CGO_CFLAGS="${CFLAGS}"
@@ -50,7 +51,7 @@ build() {
 package() {
   cd "${srcdir}/"
 
-  install -Dm 755 "./clamav-prometheus-exporter-a589557e45e08f5c6b6630536b4da5c3261a335b/carbonio-prometheus-clamav-exporter" \
+  install -Dm 755 "./clamav-prometheus-exporter-1.0.0/carbonio-prometheus-clamav-exporter" \
     "${pkgdir}/usr/bin/${pkgname}"
 
   install -Dm 644 "${pkgname}.service" \
